<resources>
    <string name="app_name">透明工厂</string>

    <string name="default_channel_name">AUTOOrg</string>
    <string name="net_error">网络连接中断，请检查网络</string>

    <string name="check_phone">为方便您的使用，请验证手机</string>
    <string name="get_verify">获取验证码</string>
    <string name="verify_phone_number">验证手机</string>
    <string name="cannot_get_verify_pre">收不到验证码？使用</string>
    <string name="voice_verify">语音验证码</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="verify_code_have_send">已发送验证码短信到</string>
    <string name="get_failed">获取验证码失败</string>
    <string name="getting">获取中</string>

    <!-- login -->
    <string name="login">登录</string>
    <string name="hint_phone_num">手机号</string>
    <string name="input_correct_phone_num">请输入正确的手机号</string>
    <string name="hint_verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="retry_get">重新获取</string>
    <string name="format_getting">%ds</string>
    <string name="user_agree">点击下一步按键即表示你已阅读并同意</string>
    <string name="register_agree"><u>《使用规则与服务协议》</u></string>
    <string name="sure">确认</string>
    <string name="sms_login">没有收到验证码？用短信登陆</string>
    <string name="sms_key_word">【ETCP停车】</string>
    <string name="register">注册</string>
    <string name="next_step">下一步</string>
    <string name="no_receive">没收到？</string>

    <string name="calling">电话拨打中</string>
    <string name="careful_in_call">请留意来电</string>
    <string name="service_phone">400-000-xxxx</string>
    <string name="input_verifycode_info_text">请输入验证码</string>

    <string name="setting">系统设置</string>
    <!-- Setting Begin-->
    <string name="setting_close_msg">确认关闭消息推送吗?</string>
    <string name="setting_close_sms">确认关闭短信推送吗?</string>
    <string name="setting_title_msg">消息主动通知</string>
    <string name="setting_title_sms">短信通知</string>
    <string name="setting_error_msg">设置失败!</string>
    <string name="setting_feedback">建议反馈</string>
    <string name="setting_evaluation">评分</string>

    <string name="logout">退出登录</string>
    <string name="user_help">使用帮助</string>
    <string name="check_update">当前版本</string>
    <string name="about_us">关于我们</string>

    <string name="latest_version">您当前使用的是最新版本</string>

    <string name="request_error_msg">获取数据失败!（%d）</string>
    <string name="request_parser_msg_error">数据解析失败!</string>
    <string name="request_msg_null">服务器返回数据为空!</string>

    <!-- 设置 -->
    <string name="setting_logout_dialog_message">确定退出当前登录帐号吗?</string>
    <string name="setting_checkup_status_no_message">当前已是最新版本!</string>
    <string name="cancel_text">取消</string>
    <string name="ok_text">确定</string>

    <!-- update -->
    <string name="no_network">无网络，请稍后再试！</string>
    <string name="title_activity_lamp_map">LampMapActivity</string>
    <string name="input_search_lamp">搜索设备</string>

    <string name="list">列表</string>
    <string name="map">地图</string>
    <string name="nearby">附近设备</string>

    <string name="main_exit_message">再按一次退出程序</string>

    <string name="work_model">工作模式</string>
    <!--Map-->
    <string name="map_control">控制</string>
    <string name="map_status">状态</string>
    <string name="map_check">检测</string>

    <string name="scan">扫一扫</string>
    <string name="text_scan">将二维码放到框内即可扫描</string>
    <string name="cmera_is_not_working">相机无法正常打开请检查权限</string>
    <string name="scan_code_failed">请扫描正确的二维码</string>

    <string name="map_check_text">您所辖项目灯箱现已出现故障，该灯箱光源已经偏离正常工作状态，可能约在45天内停止工作，请尽快安排进行检修。</string>

</resources>
