<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_cream"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/color_cccccc" />

        <RadioGroup
            android:id="@+id/rg_map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_35"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dip_10"
            android:orientation="horizontal"
            android:padding="1dp"
            android:background="@color/c_4897fa">

            <RadioButton
                android:id="@+id/rb_map_control"
                style="@style/MapTab"
                android:text="@string/map_control" />

            <RadioButton
                android:id="@+id/rb_map_status"
                style="@style/MapTab"
                android:layout_marginLeft="1dp"
                android:text="@string/map_status" />

            <RadioButton
                android:id="@+id/rb_map_check"
                style="@style/MapTab"
                android:layout_marginLeft="1dp"
                android:text="@string/map_check" />

        </RadioGroup>


        <FrameLayout
            android:id="@+id/fl_map_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_work_model"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_40"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_btn_blue_line"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/work_model"
                android:textColor="@color/color_ffffff"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>