<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/etcp_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/c_dddddd" />


                <RelativeLayout
                    android:id="@+id/rl_msg"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@color/white"
                    android:padding="0dp">

                    <ImageView
                        android:id="@+id/set_icon_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17.5dp"
                        android:src="@drawable/list_icon_news" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/set_icon_news"
                        android:text="@string/setting_title_msg"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/dip_14" />

                    <ImageView
                        android:id="@+id/iv_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:background="@drawable/ios7_switch_on"
                        android:scaleType="fitXY" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_sms"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/white"
                    android:padding="0dp">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/c_dddddd" />

                    <ImageView
                        android:id="@+id/set_icon_notice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17.5dp"
                        android:src="@drawable/list_icon_notice" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/set_icon_notice"
                        android:text="@string/setting_title_sms"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/dip_14" />

                    <ImageView
                        android:id="@+id/iv_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:background="@drawable/ios7_switch_on"
                        android:scaleType="fitXY" />
                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@color/c_dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@color/c_dddddd" />

                <RelativeLayout
                    android:id="@+id/setting_rl_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@color/white"
                    android:padding="0dp">

                    <ImageView
                        android:id="@+id/set_icon_proposal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17.5dp"
                        android:src="@drawable/list_icon_proposal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/set_icon_proposal"
                        android:text="@string/setting_feedback"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/dip_14" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:src="@drawable/list_icon_arrow" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/setting_rl_help"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@color/white"
                    android:padding="0dp">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/c_dddddd" />

                    <ImageView
                        android:id="@+id/set_icon_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17.5dp"
                        android:src="@drawable/set_icon_help" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/set_icon_help"
                        android:text="@string/user_help"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/dip_14" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:src="@drawable/list_icon_arrow" />


                </RelativeLayout>


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@color/c_dddddd" />


                <RelativeLayout
                    android:id="@+id/setting_rl_checkup"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
                    android:padding="0dp">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:background="@color/c_dddddd" />

                    <ImageView
                        android:id="@+id/set_icon_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17.5dp"
                        android:src="@drawable/list_icon_version" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/set_icon_version"
                        android:text="@string/check_update"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/dip_14" />

                    <TextView
                        android:id="@+id/setting_tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:textColor="@color/setting_text_color_version"
                        android:textSize="@dimen/dip_12" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/setting_rl_about"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/white"
                    android:padding="0dp">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/c_dddddd" />

                    <ImageView
                        android:id="@+id/set_icon_aboutus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17.5dp"
                        android:src="@drawable/list_icon_aboutus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/set_icon_aboutus"
                        android:text="@string/about_us"
                        android:textColor="@color/etcp_gray_text" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:src="@drawable/list_icon_arrow" />

                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@color/c_dddddd" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/setting_ll_logout"
        android:layout_width="285dp"
        android:layout_height="39dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/selector_btn_red_line"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/logout"
            android:textColor="@color/color_ffffff" />
    </LinearLayout>
</LinearLayout>